Nuevo inicio y agrego deportes con imagenes

--- a/ecommerce/productos/templates/productos/base_admin.html
+++ b/ecommerce/productos/templates/productos/base_admin.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     {% load static %}
-    <title>Ecommerce Deportivo</title>
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -28,13 +27,11 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">Todos</a></li>
+                                <li><a class="dropdown-item" href="#!">Menu</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Basquet</a></li>
-                                <li><a class="dropdown-item" href="#!">Fútbol</a></li>
-                                <li><a class="dropdown-item" href="#!">Natación</a></li>
-                                <li><a class="dropdown-item" href="#!">Tenis</a></li>
-                                <li><a class="dropdown-item" href="#!">Voley</a></li>
+                                <li><a class="dropdown-item" href="#!">Deportes</a></li>
+                                <li><a class="dropdown-item" href="#!">Articulos</a></li>
+                                <li><a class="dropdown-item" href="#!">Usuarios</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -50,7 +47,7 @@
         </nav>
         <!-- Header-->
         <header class="bg-dark py-2">
-            <div class="container px-4 px-lg-5 my-5">
+            <div class="container px-4 px-lg-5 my-2">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">E-commerce Deportivo</h1>
                     <p class="lead fw-normal text-white-50 mb-0">Todos los productos en un solo lugar</p>
@@ -61,6 +58,7 @@
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                    <p> Acá va a haber contenido para el administrador del sitio </p>
                 {% block contenido%}
 
                 {% endblock %}
