--- a/ecommerce/productos/templates/productos/inicio.html
+++ b/ecommerce/productos/templates/productos/inicio.html
@@ -2,6 +2,24 @@
 
 {% block contenido %}
 
-
+    {% for deporte in deporte_lista %}
+        <div class="col mb-5">
+            <div class="card h-100">
+                <!-- Product image-->
+                <img class="card-img-top" src={{deporte.imagen}} alt="..." />
+                <!-- Product details-->
+                <div class="card-body p-4">
+                    <div class="text-center">
+                        <!-- Product name-->
+                        <h5 class="fw-bolder">{{deporte.nombre}}</h5>
+                    </div>
+                </div>
+                <!-- Product actions-->
+                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver artículos</a></div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 
 {% endblock %}
