Agrego vista para incorporar artículos

--- a/ecommerce/productos/templates/productos/articulo_nuevo.html
+++ b/ecommerce/productos/templates/productos/articulo_nuevo.html
@@ -3,13 +3,22 @@
 {% block contenido %}
 
 <h1 class="mt-4">Artículos</h1>
-<p> Formulario para ingresar un deporte nuevo </p>
+<p> Ingresar un artículo nuevo </p>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <p> Deporte: <input type="number" name="deporte"> </p>
     <p> Nombre: <input type="text" name="nombre"> </p>
-    <p> Marca: <input type="number" name="marca"> </p>
     <p> Descripcion: <input type="text" name="descripcion"> </p>
+    <p>Deporte: <select class="selectpicker" name="deporte"> 
+        {% for deporte in deportes %}
+        <option>{{deporte}}</option>
+        {% endfor %}
+    </select></p>
+
+    <p>Marca: <select class="selectpicker" name="marca">
+        {% for marca in marcas %}
+        <option>{{marca}}</option>
+        {% endfor %}
+    </select></p>
     <p> Precio: <input type="number" name="precio"> </p>
     <p> Publicacion: <input type="date" name="publicacion"> </p>
     <p> Imagen: <input type="file" name="imagen"> </p>
