Formularios para cargar y listar todos los artículos

--- a/ecommerce/productos/templates/productos/articulo_nuevo.html
+++ b/ecommerce/productos/templates/productos/articulo_nuevo.html
@@ -2,29 +2,33 @@
 
 {% block contenido %}
 
-<h1 class="mt-4">Artículos</h1>
-<p> Ingresar un artículo nuevo </p>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <p> Nombre: <input type="text" name="nombre"> </p>
-    <p> Descripcion: <input type="text" name="descripcion"> </p>
-    <p>Deporte: <select class="selectpicker" name="deporte"> 
-        {% for deporte in deportes %}
-        <option>{{deporte}}</option>
-        {% endfor %}
-    </select></p>
+    <div class="container px-2 px-lg-2 mt-1">
+        <div class="row gx-3 gx-lg-3 row-cols-1 row-cols-md-1 row-cols-xl-2 justify-content-center">
+            <h1 class="mt-4">Nuevo Artículo</h1>
+            <div class="container px-4 px-lg-5 mt-5">
+                <p> Nombre: <input type="text" name="nombre"> </p>
+                <p> Descripcion: <input type="text" size="100" adjust="True" name="descripcion"> </p>
+                <p>Deporte: <select class="selectpicker" name="deporte"> 
+                    {% for deporte in deportes %}
+                    <option>{{deporte}}</option>
+                    {% endfor %}
+                </select></p>
 
-    <p>Marca: <select class="selectpicker" name="marca">
-        {% for marca in marcas %}
-        <option>{{marca}}</option>
-        {% endfor %}
-    </select></p>
-    <p> Precio: <input type="number" name="precio"> </p>
-    <p> Publicacion: <input type="date" name="publicacion"> </p>
-    <p> Imagen: <input type="file" name="imagen"> </p>
+                <p>Marca: <select class="selectpicker" name="marca">
+                    {% for marca in marcas %}
+                    <option>{{marca}}</option>
+                    {% endfor %}
+                </select></p>
+                <p> Precio: <input type="number" name="precio"> </p>
+                <p> Publicacion: <input type="date" name="publicacion"> </p>
+                <p> Imagen: <input type="file" name="imagen"> </p>
 
-    <input type="submit" value="Crear articulo">
-
+                <input type="submit" value="Crear articulo">
+            </div>
+        </div>
+    </div>
 </form>
 
 {% endblock %}
