--- a/ecommerce/productos/templates/productos/deportes_nuevo.html
+++ b/ecommerce/productos/templates/productos/deportes_nuevo.html
@@ -2,16 +2,17 @@
 
 {% block contenido %}
 
-<h1 class="mt-4">Deportes</h1>
-<p> Formulario para ingresar un deporte nuevo </p>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <p> Nombre: <input type="text" name="nombre"> </p>
-    <p> Imagen: <input type="file" name="imagen"> </p>
+<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-2 row-cols-xl-4 justify-content-center"> 
+    <h1 class="mt-4">Ingresar un deporte nuevo</h1>
+    
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <p> Nombre: <input type="text" name="nombre"> </p>
+        <p> Imagen: <input type="file" name="imagen"> </p>
 
-    <input type="submit" value="Crear deporte">
+        <input type="submit" value="Crear deporte">
 
-</form>
-<a href="{% url 'productos-inicio' %}"> Ir a inicio </a>
-
+    </form>
+    
+</div>
 {% endblock %}
