--- a/ecommerce/productos/templates/productos/articulo_nuevo.html
+++ b/ecommerce/productos/templates/productos/articulo_nuevo.html
@@ -9,7 +9,7 @@
             <h1 class="mt-4">Nuevo Artículo</h1>
             <div class="container px-4 px-lg-5 mt-5">
                 <p> Nombre: <input type="text" name="nombre"> </p>
-                <p> Descripcion: <input type="text" size="100" adjust="True" name="descripcion"> </p>
+                <p> Descripcion: <input type="text" size="100" name="descripcion"> </p>
                 <p>Deporte: <select class="selectpicker" name="deporte"> 
                     {% for deporte in deportes %}
                     <option>{{deporte}}</option>
