--- a/ecommerce/productos/templates/productos/articulos_listar.html
+++ b/ecommerce/productos/templates/productos/articulos_listar.html
@@ -15,11 +15,16 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">{{articulo.nombre}}</h5>
+                                    Precio ${{articulo.precio}}
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver detalle</a></div>
+                                {% if request.user.is_superuser %}
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-eliminar' articulo.id %}">Eliminar artículo</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-editar' articulo.id %}">Editar artículo</a></div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
