--- a/ecommerce/productos/templates/productos/articulos_listar.html
+++ b/ecommerce/productos/templates/productos/articulos_listar.html
@@ -5,30 +5,38 @@
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
-                {% for articulo in articulos_resultado %}
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src={{articulo.imagen.url}} alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">{{articulo.nombre}}</h5>
-                                    Precio ${{articulo.precio}}
+                {% if cantidad == 0 %}
+                    <h5 class="fw-bolder">No hay artículos de {{deporte}} para mostrar</h5>
+                {% else %}
+                <p></p>
+                <h5 class="fw-bolder">Artículos de {{deporte}}:</h5>
+                <p></p>
+                <p></p>
+                    {% for articulo in articulos_resultado %}
+                        <div class="col mb-5">
+                            <div class="card h-100">
+                                <!-- Product image-->
+                                <img class="card-img-top" src={{articulo.imagen.url}} alt="..." />
+                                <!-- Product details-->
+                                <div class="card-body p-4">
+                                    <div class="text-center">
+                                        <!-- Product name-->
+                                        <h5 class="fw-bolder">{{articulo.nombre}}</h5>
+                                        Precio ${{articulo.precio}}
+                                    </div>
+                                </div>
+                                <!-- Product actions-->
+                                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver detalle</a></div>
+                                    {% if request.user.is_superuser %}
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-eliminar' articulo.id %}">Eliminar artículo</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-editar' articulo.id %}">Editar artículo</a></div>
+                                    {% endif %}
                                 </div>
                             </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver detalle</a></div>
-                                {% if request.user.is_superuser %}
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-eliminar' articulo.id %}">Eliminar artículo</a></div>
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-editar' articulo.id %}">Editar artículo</a></div>
-                                {% endif %}
-                            </div>
                         </div>
-                    </div>
-                {% endfor %}
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
 
