--- a/ecommerce/productos/templates/productos/articulos_listar.html
+++ b/ecommerce/productos/templates/productos/articulos_listar.html
@@ -27,7 +27,7 @@
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver detalle</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-detalle' articulo.id %}">Ver detalle</a></div>
                                     {% if request.user.is_superuser %}
                                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-eliminar' articulo.id %}">Eliminar artículo</a></div>
                                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-editar' articulo.id %}">Editar artículo</a></div>
