--- a/ecommerce/productos/templates/productos/base.html
+++ b/ecommerce/productos/templates/productos/base.html
@@ -21,7 +21,7 @@
                 {% if request.user.is_authenticated %}
                 <a class="btn btn-primary" href="{% url 'usuarios-logout' %}">Logout </a>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{request.user}}</a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{request.user.first_name}}</a>
                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'usuarios-editar' %}">Editar datos</a>
                         <a class="dropdown-item" href="#!">Another action</a>
