--- a/ecommerce/productos/templates/productos/articulo_detalle.html
+++ b/ecommerce/productos/templates/productos/articulo_detalle.html
@@ -17,17 +17,23 @@
                     <p class="lead">{{articulo.descripcion}}</p>
                     <p class="lead">Fecha de publicación: {{articulo.publicacion}}</p>
                     <a class="btn btn-outline-dark mt-auto" href="{% url 'articulos-listar' 0 %}">Volver</a>
-
-                </div>
-                <div>
-                    Mensajes
-                    {% for mensaje in mensajes %}
-                    <p class="lead"> De {{mensaje.user_id}}: {{mensaje.mensaje}}</p>
-                    {% endfor %}
                 </div>
             </div>
-        </div>
-    </section>
+            <div class="row gx-4 gx-lg-5 align-items-left">
+                Mensajes
+                {% for mensaje in mensajes %}
+                <p class="lead"> de {{mensaje.user}}-{{mensaje.fecha}}: {{mensaje.mensaje}}</p>
+                {% endfor %}
+
+                <form method="post">
+                    {% csrf_token %}
+                    <p> Mensaje: <input type="text" name="mensaje"></p>
+                    <input type="submit" value="Ingresar comentario">
+                </form>
+            </div>
     
+        </div>
+ 
+    </section>
 
 {% endblock %}
